# dyga-engine

./: .gitignore  CMakeLists.txt  README.md
compositor/: main.cpp
compositor/common/: Controller.hpp  Property.h  Property.hpp  QuitListener.hpp  Visitor.h
painter/: Painter.cpp  Painter.h
test/: compositor_common_test.cpp  main_test.cpp
